# aerof_dev

./: .cproject  .gitignore  .hgignore  .hgtags  .project  64bit.defs  Aerof_unordered_set.h  AgglomeratedFace.C  AgglomeratedFace.h  ArpackUtil.h  BCApplier.C  BCApplier.h  BCApplierCore.C  BCond.C  BCond.h  BasicGeometry.C  BasicGeometry.h  BcData.h  BcDef.h  BcFcn.C  BcFcn.h  BcFcnCore.C  BinFileHandler.h  BlockAlloc.C  BlockAlloc.h  BlockTridiagonalMatrix.C  BlockTridiagonalMatrix.h  CMakeLists.txt  Communicator.C  Communicator.h  CommunicatorCore.C  CommunicatorMPI.C  Connectivity.C  Connectivity.h  ConnectivityCore.C  CorotSolver.C  CorotSolver.h  CurvatureDetection.C  CurvatureDetection.h  DESTerm.h  (+390 more)
AlternatingLeastSquare/: als_io.cpp  als_io.h  als_lapack.cpp  als_lapack.h  als_util.cpp  als_util.h
AutoDiff/: Function.h  SpaceDerivatives.h  Taylor.h  roeturkeljac5.h
Dev/: devtools.C  devtools.h
FSI/: CrackingSurface.cpp  CrackingSurface.h  DynamicNodalTransfer.cpp  DynamicNodalTransfer.cpp.orig  DynamicNodalTransfer.h
IntersectorFRG/: IntersectorFRG.C  IntersectorFRG.h
IntersectorPhysBAM/: FloodFill.C  FloodFill.h  IntersectorPhysBAM.C  IntersectorPhysBAM.h  Mpi_Utilities.C  Mpi_Utilities.h
LevelSet/: LevelSetStructure.h  MultiGridLevelSetStructure.C  MultiGridLevelSetStructure.h
Manual/: Aerof3d.html.orig
PhysBAM_Interface/: CMakeLists.txt  LOCAL_LEVELSET.h  PHYSBAM_COPYRIGHT.txt  PHYSBAM_INTERFACE.cpp  PHYSBAM_INTERFACE.h  cvs_files_to_check_out
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Basic_Geometry/: ORIENTED_BOX.h  PLANE.cpp  POINT_SIMPLEX_1D.h  POLYGON.cpp  POLYGON.h  RAY.h  SEGMENT_2D.cpp  SEGMENT_2D.h
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Continuous_Collision_Detection/: EDGE_EDGE_COLLISION.cpp  POINT_FACE_COLLISION.cpp
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Geometry_Particles/: GEOMETRY_PARTICLES.cpp  GEOMETRY_PARTICLES.h  GEOMETRY_PARTICLES_FORWARD.h
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Implicit_Objects/: IMPLICIT_OBJECT.cpp
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Intersections/: BOX_LINE_2D_INTERSECTION.cpp  BOX_PLANE_INTERSECTION.cpp  BOX_POINT_SIMPLEX_1D_INTERSECTION.cpp  RAY_BOX_INTERSECTION.cpp  RAY_BOX_INTERSECTION.h  RAY_ORIENTED_BOX_INTERSECTION.cpp  RAY_PLANE_INTERSECTION.cpp  RAY_SEGMENT_2D_INTERSECTION.cpp  RAY_TRIANGLE_3D_INTERSECTION.cpp
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Level_Sets/: LEVELSET_UTILITIES.cpp
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Spatial_Acceleration/: BOX_HIERARCHY.cpp  TRIANGLE_HIERARCHY.cpp  TRIANGLE_HIERARCHY.h
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Topology/: POINT_SIMPLEX_MESH.h  SEGMENT_MESH.cpp  SEGMENT_MESH.h  SIMPLEX_MESH.cpp  TRIANGLE_MESH.cpp  TRIANGLE_MESH.h
PhysBAM_Interface/Public_Library/PhysBAM_Geometry/Topology_Based_Geometry/: STRUCTURE.cpp  STRUCTURE.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Arrays/: ARRAY.h  ARRAYS_FORWARD.h  ARRAY_BASE.h  ARRAY_COLLECTION.cpp  ARRAY_COLLECTION.h  ARRAY_COLLECTION_ELEMENT.h  ARRAY_COLLECTION_ELEMENT_BASE.h  ARRAY_DIFFERENCE.h  ARRAY_LEFT_MULTIPLE.h  ARRAY_NEGATION.h  ARRAY_PLUS_SCALAR.h  ARRAY_PRODUCT.h  ARRAY_SUM.h  ARRAY_VIEW.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Arrays_Computations/: ARRAY_COPY.h  ARRAY_MIN_MAX.h  DOT_PRODUCT.h  INNER_PRODUCT.h  MAGNITUDE.h  SUMMATIONS.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Clone/: CLONEABLE.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Data_Structures/: ELEMENT_ID.h  HASHTABLE.h  KD_TREE.cpp  STACK.h  UNION_FIND.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Grids_Uniform_Arrays/: ARRAYS_ND_BASE.h  ARRAYS_UNIFORM_FORWARD.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Interpolation/: LINEAR_INTERPOLATION.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Log/: LOG.cpp  LOG.h  LOG_ENTRY.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Math_Tools/: Hash.h  RANGE.h  exchange.h  max.h  min.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Matrices/: FRAME.h  MATRIX.h  MATRIX_0X0.h  MATRIX_0X1.h  MATRIX_1X1.h  MATRIX_1X2.h  MATRIX_2X2.h  MATRIX_3X2.h  MATRIX_3X3.h  MATRIX_4X4.h  MATRIX_BASE.cpp  MATRIX_BASE.h  MATRIX_FORWARD.h  QUATERNION.h  SYMMETRIC_MATRIX_3X3.cpp  SYMMETRIC_MATRIX_3X3.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Nonlinear_Equations/: ITERATIVE_SOLVER.cpp  ITERATIVE_SOLVER.h  NONLINEAR_FUNCTION.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Parsing/: STRING_UTILITIES.cpp  STRING_UTILITIES.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Point_Clouds/: POINT_CLOUD.h  POINT_CLOUD_FORWARD.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Point_Clouds_Computations/: CENTER.h  EULER_STEP.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Polynomials/: CUBIC.cpp  CUBIC.h  QUADRATIC.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Random_Numbers/: RANDOM_NUMBERS.cpp
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Read_Write/Arrays/: READ_WRITE_ARRAY.h  READ_WRITE_ARRAY_VIEW.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Read_Write/Matrices_And_Vectors/: READ_WRITE_TWIST.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Read_Write/Utilities/: FILE_UTILITIES.cpp  FILE_UTILITIES.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Read_Write/Vectors/: READ_WRITE_VECTOR.h  READ_WRITE_VECTOR_0D.h  READ_WRITE_VECTOR_1D.h  READ_WRITE_VECTOR_2D.h  READ_WRITE_VECTOR_3D.h  READ_WRITE_VECTOR_BASE.h  READ_WRITE_VECTOR_ND.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Utilities/: TYPE_UTILITIES.h
PhysBAM_Interface/Public_Library/PhysBAM_Tools/Vectors/: TWIST.h  VECTOR.h  VECTOR_0D.h  VECTOR_3D.h  VECTOR_BASE.h  VECTOR_FORWARD.h  VECTOR_ND.h
Solvers/: LevelSetSolver.h  LevelSetSolver5.C  NavierStokesCoupledSolver.h  NavierStokesCoupledSolver5.C  NavierStokesCoupledSolver6.C  NavierStokesCoupledSolver7.C  NavierStokesEmbedded.h  NavierStokesEmbeddedCoupledSolver.h  NavierStokesEmbeddedCoupledSolver5.C  NavierStokesEmbeddedCoupledSolver6.C  NavierStokesEmbeddedCoupledSolver7.C  NavierStokesEmbeddedSegSolver.h  NavierStokesEmbeddedSegSolver651.C  Solvers.h  (+6 more)
(+128 files in other folders)
